Fix ToolBar icon spacing and alignment.

--- a/styles/mobile/common/icons.less
+++ b/styles/mobile/common/icons.less
@@ -112,7 +112,6 @@ body:before
     width: 100%;
     height: 100%;
     text-align: left;
-    margin-left: -.06em;
     vertical-align: middle;
     background-size: auto;
     font: 1em/1em "Kendo UI";
